--- a/LMSGI/PaginaWeb/index.html
+++ b/LMSGI/PaginaWeb/index.html
@@ -33,7 +33,7 @@
                 <input type="password" class="form-control" id="pwd" placeholder="Contraseña">
             </div>
             <div class="form-group form-group-btn">
-              <a href="PaginaP.html" target="_blank">Entrar</a>
+              <a href="PaginaP.html">Entrar</a>
             </div>
             <div class="clearfix"></div>
             <div class="checkbox">
