--- a/LMSGI/PaginaWeb/Contactanos.html
+++ b/LMSGI/PaginaWeb/Contactanos.html
@@ -52,9 +52,11 @@
 			<div class="contenedor">
 			<nav>
 				<div class="menu">
-				<a href="ass.html">Sobre Nosotros</a>
+                    <a href="PaginaP.html">Inicio</a>
+				<a href="nosotros.html">Sobre Nosotros</a>
 				<a href="Contactanos.html">Contactanos</a>
-				<a href="#">Demo</a>
+				<a href="demo.html">Demo</a>
+                <a href="index.html">Salir</a>
 			</div>
 			</nav>
 			<h2 class="logotipo"><a href="PaginaP.html">S&F Hub</a></h2>	
@@ -79,7 +81,7 @@
                         <!-- big icon -->
                         <i class="fa fa-street-view"></i>
                         <!-- contact details  -->
-                        <span class="contact-details">#30/67, 5th Street, Mega Market Circle, New Delhi - 625001</span>
+                        <span class="contact-details">Polígono Industrial Las Salinas, Avenida Europa, 2-3, 30840, Murcia</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
@@ -104,27 +106,27 @@
             <!-- form content -->
             <div class="form-content ">
                 <!-- paragraph -->
-                <p>Tiene algun problema? Contactenos.</p>
+                <p>¿Tiene algun problema? Contactenos.</p>
                 <form role="form" id="contactForm" method="post">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label for="name">Nombre</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Introduzca su nombre">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Introduce su nombre">
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Introduzaca su Email">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Introduce su Email">
                             </div>
                             <div class="form-group">
                                 <label for="phone">Telf</label>
-                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Introduzca el teléfono">
+                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Introduce su teléfono">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label for="message">Mensaje</label>
-                                <textarea class="form-control" id="message" name="message" rows="9" placeholder="Introduce el mensaje"></textarea>
+                                <textarea class="form-control" id="message" name="message" rows="9" placeholder="Introduce su mensaje"></textarea>
                             </div>
                         </div>
                     </div>
@@ -172,7 +174,7 @@
 							
 							
 							<ul class="copyright">
-								<li>&copy; Derechos Reservados de Copiryght.</li><li>Diseñador: S&F Hub</li>
+								<li>&copy; Derechos Reservados de Copyright.</li><li>Diseñador: S&F Hub</li>
 							</ul>
 						</div>
 					</section>
