--- a/LMSGI/PaginaWeb/Contactanos.html
+++ b/LMSGI/PaginaWeb/Contactanos.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="img/logo4.png" type="image/x-icon">
     
 
-<!--------PRUEBA-------->
+<!--------IMPORTS-------->
 
  
     <link href="css2/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
     <link rel="shortcut icon" href="img/logo4.png" type="image/x-icon">
 
     
-    <!--------PRUEBA-------->
+    <!--------IMPORTS-------->
 	<title>S&F Hub</title >
 </head>
 <body>
@@ -103,9 +103,7 @@
                     </div>
                 </div>
             </div>
-            <!-- form content -->
             <div class="form-content ">
-                <!-- paragraph -->
                 <p>¿Tiene algun problema? Contactenos.</p>
                 <form role="form" id="contactForm" method="post">
                     <div class="row">
@@ -163,7 +161,7 @@
 
 <!------CONTACTANOS------->
 
-		</div>
+		
 	</main>
 	
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
@@ -178,8 +176,5 @@
 							</ul>
 						</div>
 					</section>
-
-			</div>
-
 </body>
 </html>
