--- a/LMSGI/PaginaWeb/Contactanos.html
+++ b/LMSGI/PaginaWeb/Contactanos.html
@@ -105,20 +105,20 @@
             </div>
             <div class="form-content ">
                 <p>¿Tiene algun problema? Contactenos.</p>
-                <form role="form" id="contactForm" method="post">
+                <form role="form" id="contactForm" method="post" action="https://formspree.io/f/mleabalp">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label for="name">Nombre</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Introduce su nombre">
+                                <input type="text" class="form-control" id="name" name="Nombre" placeholder="Introduce su nombre">
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Introduce su Email">
+                                <input type="email" class="form-control" id="email" name="Email" placeholder="Introduce su Email">
                             </div>
                             <div class="form-group">
                                 <label for="phone">Telf</label>
-                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Introduce su teléfono">
+                                <input type="text" class="form-control" id="phone" name="Telefono" placeholder="Introduce su teléfono">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
