--- a/LMSGI/PaginaWeb/Contactanos.html
+++ b/LMSGI/PaginaWeb/Contactanos.html
@@ -105,7 +105,7 @@
             </div>
             <div class="form-content ">
                 <p>¿Tiene algun problema? Contactenos.</p>
-                <form role="form" id="contactForm" method="post" action="https://formspree.io/f/mleabalp">
+                <form role="form" id="contactForm" method="post" action="https://formspree.io/f/mjvjwjaw">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
