--- a/LMSGI/PaginaWeb/nosotros.html
+++ b/LMSGI/PaginaWeb/nosotros.html
@@ -52,6 +52,8 @@
 										<br>
 										<p>Informacion de Contacto: Jorge@gmail.com</p>
 										<br>
+										<p>Correo de la Empresa: syfhub.jdf@gmail.com</p>
+										<br>
 										<p>Tel: 63256325</p>
 									</section>
 								</div>
@@ -68,6 +70,8 @@
 										<br>
 										<p>Informacion de Contacto: Diego@gmail.com</p>
 										<br>
+										<p>Correo de la Empresa: syfhub.jdf@gmail.com</p>
+										<br>
 										<p>Tel: 647854545</p>
 									</section>
 								</div>
@@ -82,6 +86,8 @@
 										<p>Habilidades: Java, JavaSwing, JavaFX, HTML5, CSS3, UML, XML, XSD,JSON,phpMyAdmin, AWS, P.LAMP.</p>
 										<br>
 										<p>Informacion de Contacto: Fran@gmail.com</p>
+										<br>
+										<p>Correo de la Empresa: syfhub.jdf@gmail.com</p>
 										<br>
 										<p>Tel: 68545855</p>
 
