--- a/LMSGI/PaginaWeb/demo.html
+++ b/LMSGI/PaginaWeb/demo.html
@@ -15,7 +15,7 @@
 				<div class="menu2">
 				<a href="PaginaP.html">Inicio</a>
 				<a href="nosotros.html">Sobre Nosotros</a>
-				<a href="contactanos.html">Contactanos</a>
+				<a href="Contactanos.html">Contactanos</a>
 				<a href="demo.html">Demo</a>
 				<a href="index.html">Salir</a>
 			</div>
