--- a/LMSGI/PaginaWeb/Contactanos.html
+++ b/LMSGI/PaginaWeb/Contactanos.html
@@ -46,6 +46,25 @@
     
     <!--------IMPORTS-------->
 	<title>S&F Hub</title >
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
+    <script>
+        function SubForm (){
+            $.ajax({
+                url:"https://api.apispreadsheets.com/data/13358/",
+                type:"post",
+                data:$("#myForm").serializeArray(),
+                success: function(){
+                    alert("Form Data Submitted :)")
+                },
+                error: function(){
+                    alert("There was an error :(")
+                }
+            });
+        }
+    </script>
 </head>
 <body>
 	<header>
@@ -103,9 +122,9 @@
                     </div>
                 </div>
             </div>
-            <div class="form-content ">
+            <div class="form-content">
                 <p>¿Tiene algun problema? Contactenos.</p>
-                <form role="form" id="contactForm" method="post" action="https://formspree.io/f/mjvjwjaw">
+                <form role="form" id="contactForm" method="post"  id="myForm" >
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
@@ -129,10 +148,10 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-lg btn-theme">Enviar</button>
+                      <!---<input type="button" class="btn btn-lg btn-theme" value="Enviar" onclick='SubForm()'></input>--->
                     </div>
-                </form>
-
+             <input type="button" class="btn btn-lg btn-theme" value="Enviar" onclick="SubForm()"/>           
+    </form>
             </div>
         
         </div>
