--- a/LMSGI/PaginaWeb/nosotros.html
+++ b/LMSGI/PaginaWeb/nosotros.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/PaginaP.css">
+	<link rel="stylesheet" href="css/paginaP.css">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="shortcut icon" href="img/logo4.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
@@ -15,15 +15,15 @@
 			<nav>
 				<div class="menu2">
 					<div class="letras">
-				<a href="PaginaP.html">Inicio</a>
+				<a href="paginaP.html">Inicio</a>
 				<a href="nosotros.html">Sobre Nosotros</a>
-				<a href="Contactanos.html">Contactanos</a>
+				<a href="contactanos.html">Contactanos</a>
 				<a href="demo.html">Demo</a>
 				<a href="index.html">Salir</a>
 				</div>
 			</div>
 			</nav>
-			<h2 class="logotipo"><a href="PaginaP.html">S&F Hub</a></h2>	
+			<h2 class="logotipo"><a href="paginaP.html">S&F Hub</a></h2>	
 		</div>
 	</header>
 
