--- a/LMSGI/PaginaWeb/index.html
+++ b/LMSGI/PaginaWeb/index.html
@@ -32,7 +32,7 @@
                 <input type="password" class="form-control" id="pwd" placeholder="Contraseña">
             </div>
             <div class="form-group form-group-btn">
-              <a href="paginaP.html">Entrar</a>
+              <button class="btn btn-primary"><a href="paginaP.html">Entrar</a></button>
             </div>
             <div class="clearfix"></div>
             <div class="checkbox">
