--- a/LMSGI/PaginaWeb/contactanos.html
+++ b/LMSGI/PaginaWeb/contactanos.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="form-content">
-                <p>¿Tiene algun problema? Contactenos.</p>
+                <p>¿Tienes alguna duda sobre este sitio web? Contactenos.</p>
                 <form action="https://formspree.io/f/mjvjwjaw" method="post" role="form" id="contactForm">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
