--- a/LMSGI/PaginaWeb/index.html
+++ b/LMSGI/PaginaWeb/index.html
@@ -5,10 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/normalize.css">
-
-
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
-	<link rel="shortcut icon" href="img/logo4.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/logo4.PNG" type="image/x-icon">
 	<title>S&F Hub</title>
 </head>
 <body>
